--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" c>
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <title>Electron</title>
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app" class="h-full overflow-hidden"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
