update or something

--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="keywords" content="l4d2, Left 4 Dead 2, l4d, Left 4 Dead, mods, mod manager, Left 4 Mods, l4m">
+		<meta name="author" content="Žan Pukmajster">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Left 4 Mods</title>
+		<meta
+			name="description"
+			content="Left 4 Mods is a mod manager for Left 4 Dead 2."
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-theme="crimson">
