--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="app" class="h-full overflow-hidden"></div>
+    <div id="app" data-theme="skeleton"  class="h-full overflow-hidden"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
